Update InventoryPageTest.java